@@ -6,6 +6,7 @@ QXmpp 0.6.2 (UNRELEASED)
 
   - Improve SASL code test coverage.
   - Improve QXmppMessage test coverage.
+  - Add a "reason" argument to QXmppRosterManager's subscription methods.
 
 QXmpp 0.6.1 (Jul 20, 2012)
 --------------------------
